--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "mcp-local-rag"
 version = "0.1.0"
-description = "A fully local MCP server for RAG over PDFs, DOCX, and plaintext files with collection-based scoping"
+description = "Local MCP server for RAG over PDFs, DOCX, and plaintext files."
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<3.14"
 authors = [
     { name = "Jozef833", email = "172046463+Jozef833@users.noreply.github.com" }
 ]
-keywords = ["mcp", "rag", "local", "pdf", "embeddings", "vector-search", "copilot"]
+keywords = ["mcp", "rag", "local", "pdf", "docx"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -26,7 +26,6 @@ dependencies = [
     "markitdown[docx]>=0.1.4",
     "mcp[cli]>=1.26.0",
     "numpy>=2.4.1",
-    "pip-system-certs>=5.3",
     "pydantic>=2.12.5",
     "pymupdf4llm>=0.2.9",
     "qdrant-client>=1.16.2",
@@ -44,9 +43,9 @@ explicit = true
 torch = { index = "pytorch-cpu" }
 
 [project.urls]
-Homepage = "https://github.com/Jozef833/mcp-local-rag"
-Repository = "https://github.com/Jozef833/mcp-local-rag"
-Issues = "https://github.com/Jozef833/mcp-local-rag/issues"
+Homepage = "https://github.com/Milliman-CMHH/mcp-local-rag"
+Repository = "https://github.com/Milliman-CMHH/mcp-local-rag"
+Issues = "https://github.com/Milliman-CMHH/mcp-local-rag/issues"
 
 [project.scripts]
 mcp-local-rag = "mcp_local_rag:main"
